[package]
name = "simplekv"
version = "0.1.0"
authors = ["Andrei Ozerov <andrei.ozerov92@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3"
crc = "1.8"

[lib]
name = "libsimplekv"
path = "src/lib.rs"

[[bin]]
name = "skv_mem"
src = "src/srv_mem.rs"